--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "media-player-lite",
-  "version": "0.2.3",
-  "description": "This module generates a video player element in their web page",
+  "version": "0.2.4",
+  "description": "The user now can customize the selector of the media player (supports by id or by element)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
