--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "media-player-lite",
-  "version": "0.2.5",
-  "description": "Minor fixes",
+  "version": "1.0.0",
+  "description": "Stabler and lighter",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["video","audio","player","js","html"],
   "repository": {
     "type": "git",
     "url": "https://github.com/peterju4354/media-player-lite"
